// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-react-native-stylename-to-style Generated code shoud match 'Should transform single styleName to styles object' test : Generated code shoud match 'Should transform single styleName to styles object' test  1`] = `
"
import styles from './Button.css';
const Foo = () =>  <View style={styles.wrapper}><Text>Foo</Text></View>

      ↓ ↓ ↓ ↓ ↓ ↓

'use strict';

var _Button = require('./Button.css');

var _Button2 = _interopRequireDefault(_Button);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Foo = function Foo() {
  return React.createElement(
    View,
    { style: _Button2.default.wrapper },
    React.createElement(
      Text,
      null,
      'Foo'
    )
  );
};
"
`;

exports[`babel-plugin-react-native-stylename-to-style Should transform multiple styleName classes to styles object and merge with style tag: Should transform multiple styleName classes to styles object and merge with style tag 1`] = `
"
import './Button.css';
const Foo = () =>  <View styleName=\\"wrapper red\\" style={{ marginTop: 10 }}><Text>Foo</Text></View>

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _Button = require(\\"./Button.css\\");

var _Button2 = _interopRequireDefault(_Button);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Foo = function Foo() {
  return React.createElement(
    View,
    { style: [_Button2.default.wrapper, _Button2.default.red, { marginTop: 10 }] },
    React.createElement(
      Text,
      null,
      \\"Foo\\"
    )
  );
};
"
`;

exports[`babel-plugin-react-native-stylename-to-style Should transform multiple styleName classes to styles object: Should transform multiple styleName classes to styles object 1`] = `
"
import './Button.css';
const Foo = () =>  <View styleName=\\"wrapper red\\"><Text>Foo</Text></View>

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _Button = require(\\"./Button.css\\");

var _Button2 = _interopRequireDefault(_Button);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Foo = function Foo() {
  return React.createElement(
    View,
    { style: [_Button2.default.wrapper, _Button2.default.red] },
    React.createElement(
      Text,
      null,
      \\"Foo\\"
    )
  );
};
"
`;

exports[`babel-plugin-react-native-stylename-to-style Should transform multiple styleName classes with whitespace to styles object: Should transform multiple styleName classes with whitespace to styles object 1`] = `
"
import './Button.css';
const Foo = () =>  <View styleName=\\"  wrapper  red  \\"><Text>Foo</Text></View>

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _Button = require(\\"./Button.css\\");

var _Button2 = _interopRequireDefault(_Button);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Foo = function Foo() {
  return React.createElement(
    View,
    { style: [_Button2.default.wrapper, _Button2.default.red] },
    React.createElement(
      Text,
      null,
      \\"Foo\\"
    )
  );
};
"
`;

exports[`babel-plugin-react-native-stylename-to-style Should transform single styleName to styles object and merge with style tag: Should transform single styleName to styles object and merge with style tag 1`] = `
"
import './Button.css';
const Foo = () =>  <View styleName=\\"wrapper\\" style={{ marginTop: 10 }}><Text>Foo</Text></View>

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _Button = require(\\"./Button.css\\");

var _Button2 = _interopRequireDefault(_Button);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Foo = function Foo() {
  return React.createElement(
    View,
    { style: [_Button2.default.wrapper, { marginTop: 10 }] },
    React.createElement(
      Text,
      null,
      \\"Foo\\"
    )
  );
};
"
`;

exports[`babel-plugin-react-native-stylename-to-style Should transform single styleName to styles object: Should transform single styleName to styles object 1`] = `
"
import './Button.css';
const Foo = () =>  <View styleName=\\"wrapper\\"><Text>Foo</Text></View>

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _Button = require(\\"./Button.css\\");

var _Button2 = _interopRequireDefault(_Button);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Foo = function Foo() {
  return React.createElement(
    View,
    { style: _Button2.default.wrapper },
    React.createElement(
      Text,
      null,
      \\"Foo\\"
    )
  );
};
"
`;
